# transactions_users

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  env.example  pyproject.toml  yoyo.ini
config/: api_worker.yaml  message_broker_consumer.yaml  message_broker_publisher.yaml
docs/: architecture.md  configuration.md  database.md  development.md
src/: main.py
src/application/: errors.py
src/application/command/: base.py
src/application/dto/: paginators.py  user.py
src/application/ports/: email.py  event_publisher.py  key_value_store.py  password_manager.py  randomizer.py  unit_of_work.py
src/application/ports/repositories/: __init__.py  password.py  user.py
src/application/queries/: base.py
src/domain/: entities.py  errors.py  value_objects.py
src/domain/user/: __init__.py  entity.py  factory.py  repositories.py  services.py  value_objects.py
src/infrastructure/config/: __init__.py  db.py  fastapi.py  jwt.py  logging.py  nats.py  redis.py
src/infrastructure/db/postgres/: __init__.py  apply_migrations.py  base.py  connection.py  password.py  unit_of_work.py
src/infrastructure/email/: __init__.py  body_builder.py  payload.py  sender.py
src/infrastructure/jwt/: __init__.py
src/infrastructure/key_value/: __init__.py
src/infrastructure/masage_broker/: __init__.py
src/infrastructure/password_manager/: __init__.py
src/infrastructure/randomizer/: __init__.py
src/presentation/api/: error_handler.py  server.py
src/presentation/background/: __init__.py  base.py
src/tests/integration/: conftest.py
src/tests/unit/: conftest.py
(+91 files in other folders)
