[project]
name = "transactions-users"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "argon2-cffi>=25.1.0",
  "fastapi>=0.136.1",
  "nats-py>=2.14.0",
  "psycopg[binary,pool]>=3.3.3",
  "pydantic>=2.13.3",
  "pydantic-settings[yaml]>=2.14.0",
  "pyjwt>=2.12.1",
  "redis[hiredis]>=7.4.0",
  "uvicorn>=0.46.0",
  "uvloop>=0.22.1",
  "yoyo-migrations>=9.0.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.12",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
asyncio_mode = "auto"

[tool.ruff.lint]
extend-select = ["I", "RUF"]
ignore = ["RUF001", "RUF002"]

[tool.basedpyright]
include = ["src"]
extraPaths = ["./src"]
typeCheckingMode = "standard"
exclude = [
  "**/__pycache__",
  "**/.venv",
  "**/.pytest_cache",
  "**/build",
  "**/dist",
  "**/migrations",
]
pythonVersion = "3.14"
